step to move further steps to AWS

--- a/t1.ipynb
+++ b/t1.ipynb
@@ -4573,11 +4573,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "205eca98",
+   "cell_type": "markdown",
+   "id": "f9aa4e0e",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**Further steps will be done on AWS platform**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4fcaeda",
+   "metadata": {},
    "source": []
   }
  ],
