--- a/pre-processing-trial.ipynb
+++ b/pre-processing-trial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "09f2b7f2",
    "metadata": {},
    "outputs": [],
@@ -4328,6 +4328,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "65cfe75a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['RENDERING_NPI', 'POSTAL_CODE', 'DELIVERY_SYSTEM_ENCODED',\n",
+       "       'PROVIDER_TYPE_ENCODED', 'AGE_GROUP_ENCODED', 'ADV_USER_CNT',\n",
+       "       'ADV_SVC_CNT', 'PREV_USER_CNT', 'PREV_SVC_CNT', 'TXMT_USER_CNT',\n",
+       "       'TXMT_SVC_CNT', 'EXAM_USER_CNT', 'EXAM_SVC_CNT', 'PREV_TO_EXAM_RATIO',\n",
+       "       'TXMT_TO_EXAM_RATIO', 'ADV_TO_EXAM_RATIO', 'REQUIRED_SPEC',\n",
+       "       'REQUIRED_BSNS_MODEL', 'LAB_ID', 'LAB_POSTAL_CODE'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_main = pd.read_csv('./data/csv/d_training_main.csv')\n",
+    "df_main.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "2fed11dc",
    "metadata": {},
@@ -4577,12 +4607,12 @@
    "id": "f9aa4e0e",
    "metadata": {},
    "source": [
-    "**Further steps will be done on AWS platform**"
+    "**Further steps will be done in the [post-preprocessing.ipynb](post-preprocessing.ipynb) file**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f4fcaeda",
+   "id": "c6e37229",
    "metadata": {},
    "source": []
   }
@@ -4592,6 +4622,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
