feature engineering: synthesized a new dataset, and added the dataset to the repo

--- a/pre-processing-trial.ipynb
+++ b/pre-processing-trial.ipynb
@@ -1046,13 +1046,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ba33db38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('./data/csv/cleaned_v1.csv', index=False)\n",
-    "df.to_excel('./data/xlsx/cleaned_v1.xlsx', index=False)"
+    "df.to_csv('./data/csv/cleaned_v1.csv', index=False)"
    ]
   },
   {
@@ -1431,13 +1430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "df68769d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_npi_postal_codes.to_csv('./data/csv/d_npi_postal.csv', index=False)\n",
-    "# df_npi_postal_codes.to_excel('./data/xlsx/d_npi_postal.xlsx', index=False)"
+    "# df_npi_postal_codes.to_csv('./data/csv/d_npi_postal.csv', index=False)"
    ]
   },
   {
@@ -2151,13 +2149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "35e55573",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_general.to_csv('./data/csv/d_general.csv', index=False)\n",
-    "df_general.to_excel('./data/xlsx/cleaned_v1.xlsx', index=False)"
+    "df_general.to_csv('./data/csv/d_general.csv', index=False)"
    ]
   },
   {
@@ -2400,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "cb495eb9",
    "metadata": {},
    "outputs": [],
@@ -2417,7 +2414,13 @@
     "    'prosthodontic': 2\n",
     "}\n",
     "\n",
-    "business_models = {\n",
+    "# business_models = {\n",
+    "#     'full_service_lab': 0,\n",
+    "#     'specialty_lab': 1,\n",
+    "#     'milling_center': 2\n",
+    "# }\n",
+    "\n",
+    "lab_type = {\n",
     "    'full_service_lab': 0,\n",
     "    'specialty_lab': 1,\n",
     "    'milling_center': 2\n",
@@ -3230,13 +3233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "25c9cedd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_num_main.to_csv('./data/csv/all_numerical_v1.csv', index=False)\n",
-    "df_num_main.to_excel('./data/xlsx/all_numerical_v1.xlsx', index=False)"
+    "df_num_main.to_csv('./data/csv/all_numerical_v1.csv', index=False)"
    ]
   },
   {
@@ -4245,13 +4247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "cf6083f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test_cleaned.to_csv('./data/csv/d_training_main.csv', index=False)\n",
-    "df_test_cleaned.to_excel('./data/xlsx/d_training_main.xlsx', index=False)"
+    "df_test_cleaned.to_csv('./data/csv/d_training_main.csv', index=False)"
    ]
   },
   {
@@ -4609,12 +4610,6 @@
    "source": [
     "**Further steps will be done in the [post-preprocessing.ipynb](post-preprocessing.ipynb) file**"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6e37229",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
