some more feature engineering

--- a/smart-dental-fe1.ipynb
+++ b/smart-dental-fe1.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -31,31 +15,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_synthetic = pd.read_csv('/content/d_all_synth.csv')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "L2mqP3xCO3-e"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_synthetic = pd.read_csv('/content/d_all_synth.csv')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_lab = pd.read_csv('/content/d_lab_400.csv')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ErLObt1sPQDE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_lab = pd.read_csv('/content/d_lab_400.csv')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install tqdm"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,19 +45,26 @@
         "id": "dAlqu6oZPgzZ",
         "outputId": "74c94046-4662-4362-d82f-35b8b9ac78d6"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (4.67.1)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install tqdm"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DGxGmyttPa5X"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -159,18 +148,11 @@
         "    df_lab.drop(columns=['LAB_POSTAL_CODE_INT'], inplace=True)\n",
         "\n",
         "    return d"
-      ],
-      "metadata": {
-        "id": "DGxGmyttPa5X"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_synthetic = assign_final_lab_match(df_synthetic, df_lab)"
-      ],
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -178,22 +160,22 @@
         "id": "c69O16tuPfdj",
         "outputId": "739ee92b-be14-4e52-ad50-f71a33f7c4b2"
       },
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 1792615/1792615 [1:53:16<00:00, 263.75it/s]\n"
           ]
         }
+      ],
+      "source": [
+        "df_synthetic = assign_final_lab_match(df_synthetic, df_lab)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_synthetic.head(1)"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -202,21 +184,13 @@
         "id": "SI7JrFIvxNPI",
         "outputId": "caff7a44-8166-4cb1-fe1e-fce1845f0659"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   Unnamed: 0  RENDERING_NPI  POSTAL_CODE  DELIVERY_SYSTEM_ENCODED  \\\n",
-              "0           0     1952483117        94538                        0   \n",
-              "\n",
-              "   PROVIDER_TYPE_ENCODED  AGE_GROUP_ENCODED  PREV  TXMT  ADV  CASE_ID  \\\n",
-              "0                      0                  0     1     0    0  1379044   \n",
-              "\n",
-              "   REQUIRED_SPEC  EXPEDITED  REQUIRED_LAB_TYPE  LAB_ID  LAB_POSTAL_CODE  \n",
-              "0              1          0                  0     488            94461  "
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df_synthetic"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-1446b545-4433-47d1-95ab-aeeafc32bbc9\" class=\"colab-df-container\">\n",
@@ -360,43 +334,49 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "df_synthetic"
-            }
+            "text/plain": [
+              "   Unnamed: 0  RENDERING_NPI  POSTAL_CODE  DELIVERY_SYSTEM_ENCODED  \\\n",
+              "0           0     1952483117        94538                        0   \n",
+              "\n",
+              "   PROVIDER_TYPE_ENCODED  AGE_GROUP_ENCODED  PREV  TXMT  ADV  CASE_ID  \\\n",
+              "0                      0                  0     1     0    0  1379044   \n",
+              "\n",
+              "   REQUIRED_SPEC  EXPEDITED  REQUIRED_LAB_TYPE  LAB_ID  LAB_POSTAL_CODE  \n",
+              "0              1          0                  0     488            94461  "
+            ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_synthetic.head(1)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_synthetic.drop(columns=['Unnamed: 0'], inplace=True)"
-      ],
+      "execution_count": 20,
       "metadata": {
         "id": "05SChhZHNwg1"
       },
-      "execution_count": 20,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_synthetic.drop(columns=['Unnamed: 0'], inplace=True)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_synthetic.columns"
-      ],
+      "execution_count": 21,
       "metadata": {
-        "id": "j6defBH7xOtu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "j6defBH7xOtu",
         "outputId": "414a0aa7-17d4-47c1-965d-4598d0584e1d"
       },
-      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Index(['RENDERING_NPI', 'POSTAL_CODE', 'DELIVERY_SYSTEM_ENCODED',\n",
@@ -406,21 +386,41 @@
               "      dtype='object')"
             ]
           },
+          "execution_count": 21,
           "metadata": {},
-          "execution_count": 21
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_synthetic.columns"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_synthetic.to_csv('/content/df_all_synthetic_training.csv')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "iYaJtyNXNlnR"
       },
-      "execution_count": 22,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_synthetic.to_csv('/content/d_all_synthetic_training.csv')"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
