--- a/pre-processing-trial.ipynb
+++ b/pre-processing-trial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8af1516b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ee2872af",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "24300"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bed3bf39",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6b82dde7",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3aa17ba8",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "70ac3aa4",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2100,27 +2100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "62765b4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['RENDERING_NPI', 'PROVIDER_LEGAL_NAME', 'POSTAL_CODE', 'CALENDAR_YEAR',\n",
-       "       'DELIVERY_SYSTEM', 'DELIVERY_SYSTEM_ENCODED', 'PROVIDER_TYPE',\n",
-       "       'PROVIDER_TYPE_ENCODED', 'AGE_GROUP', 'AGE_GROUP_ENCODED',\n",
-       "       'ADV_USER_CNT', 'ADV_USER_ANNOTATION_CODE', 'ADV_SVC_CNT',\n",
-       "       'ADV_SVC_ANNOTATION_CODE', 'PREV_USER_CNT', 'PREV_USER_ANNOTATION_CODE',\n",
-       "       'PREV_SVC_CNT', 'PREV_SVC_ANNOTATION_CODE', 'TXMT_USER_CNT',\n",
+       "Index(['RENDERING_NPI', 'PROVIDER_LEGAL_NAME', 'CALENDAR_YEAR',\n",
+       "       'DELIVERY_SYSTEM', 'PROVIDER_TYPE', 'AGE_GROUP', 'ADV_USER_CNT',\n",
+       "       'ADV_USER_ANNOTATION_CODE', 'ADV_SVC_CNT', 'ADV_SVC_ANNOTATION_CODE',\n",
+       "       'PREV_USER_CNT', 'PREV_USER_ANNOTATION_CODE', 'PREV_SVC_CNT',\n",
+       "       'PREV_SVC_ANNOTATION_CODE', 'TXMT_USER_CNT',\n",
        "       'TXMT_USER_ ANNOTATION_CODE', 'TXMT_SVC_CNT',\n",
        "       'TXMT_SVC_ANNOTATION_CODE', 'EXAM_USER_CNT',\n",
        "       'EXAM_USER_ANNOTATION_CODE', 'EXAM_SVC_CNT', 'EXAM_SVC_ANNOTATION_CODE',\n",
-       "       'PREV_TO_EXAM_RATIO', 'TXMT_TO_EXAM_RATIO', 'ADV_TO_EXAM_RATIO'],\n",
+       "       'DELIVERY_SYSTEM_ENCODED'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2139,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "c9e0d550",
    "metadata": {},
    "outputs": [],
@@ -2149,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "35e55573",
    "metadata": {},
    "outputs": [],
@@ -2167,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "9bfcc8a6",
    "metadata": {},
    "outputs": [
@@ -2223,7 +2222,7 @@
        "9              PHP                        2"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2235,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "c1e6b34c",
    "metadata": {},
    "outputs": [],
@@ -2245,61 +2244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "58d5b10e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PROVIDER_TYPE</th>\n",
-       "      <th>PROVIDER_TYPE_ENCODED</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>RENDERING</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19698</th>\n",
-       "      <td>RENDERING SNC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       PROVIDER_TYPE  PROVIDER_TYPE_ENCODED\n",
-       "0          RENDERING                      0\n",
-       "19698  RENDERING SNC                      1"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d_encoded_provider = df[['PROVIDER_TYPE', 'PROVIDER_TYPE_ENCODED']].drop_duplicates().sort_values('PROVIDER_TYPE_ENCODED').copy()\n",
     "d_encoded_provider"
@@ -2397,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "cb495eb9",
    "metadata": {},
    "outputs": [],
@@ -2432,14 +2380,14 @@
     "lab_names = [fake.company() for _ in range(num_records)]\n",
     "postal_codes = [fake.zipcode_in_state(state_abbr='CA') for _ in range(num_records)]\n",
     "specializations = [random.choice(list(specialization_types.values())) for _ in range(num_records)]\n",
-    "business_model_types = [random.choice(list(business_models.values())) for _ in range(num_records)]\n",
+    "lab_type = [random.choice(list(lab_type.values())) for _ in range(num_records)]\n",
     "\n",
     "data = {\n",
     "    'lab_id': lab_ids,\n",
     "    'lab_name': lab_names,\n",
     "    'postal_code': postal_codes,\n",
     "    'specialization_type': specializations,\n",
-    "    'business_model': business_model_types\n",
+    "    'lab_type': lab_type\n",
     "}\n",
     "\n",
     "df_lab = pd.DataFrame(data)"
@@ -2559,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "882c1ff2",
    "metadata": {},
    "outputs": [
@@ -2595,36 +2543,33 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Pope, Ray and Hudson</td>\n",
-       "      <td>90601</td>\n",
+       "      <td>Lopez-Jackson</td>\n",
+       "      <td>91894</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   LAB_ID              LAB_NAME LAB_POSTAL_CODE  LAB_SPECIALIZATION  \\\n",
-       "0       1  Pope, Ray and Hudson           90601                   2   \n",
-       "\n",
-       "   LAB_BSNS_MODEL  \n",
-       "0               1  "
+       "   LAB_ID       LAB_NAME LAB_POSTAL_CODE  LAB_SPECIALIZATION  LAB_BSNS_MODEL\n",
+       "0       1  Lopez-Jackson           91894                   2               0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_lab = df_lab.rename(columns={'lab_id': 'LAB_ID', 'lab_name':'LAB_NAME', 'postal_code': 'LAB_POSTAL_CODE', 'specialization_type': 'LAB_SPECIALIZATION', 'business_model': 'LAB_BSNS_MODEL'})\n",
+    "df_lab = df_lab.rename(columns={'lab_id': 'LAB_ID', 'lab_name':'LAB_NAME', 'postal_code': 'LAB_POSTAL_CODE', 'specialization_type': 'LAB_SPECIALIZATION', 'lab_type': 'LAB_BSNS_MODEL'})\n",
     "df_lab.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "0ac24503",
    "metadata": {},
    "outputs": [],
